--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "grunt-contrib-uglify": "^0.3.3",
     "grunt-curl": "*",
     "grunt-phpdocumentor": "~0.4.1",
-    "grunt-wp-i18n": "^0.4.9"
+    "grunt-wp-i18n": "^0.4.9",
+    "install": "^0.12.2"
   },
   "dependencies": {
     "grunt-contrib-watch": "^1.1.0"
